2007-11-27  Mathias Hasselmann  <mathias@openismus.com>

	Drop epc_shell_ref and epc_shell_unref and use g_atexit for cleanup.

	* docs/reference/libepc/libepc-1.0-sections.txt, libepc/shell.c,
	libepc/shell.h: Remove epc_shell_ref and epc_shell_unref.
	* libepc/consumer.c, libepc/dispatcher.c, libepc/publisher.c, 
	libepc/service-monitor.c, tests/framework.c:
	Don't call epc_shell_ref and epc_shell_unref.

2007-11-27  Murray Cumming  <murrayc@murrayc.com>

	* libepc/publisher.c: epc_publisher_set_auth_handler() documentation: 
	Note that this should be used _after_ adding the key.

2007-11-27  Murray Cumming  <murrayc@murrayc.com>

	* libepc/consumer.c: epc_consumer_lookup(): Mention the specific error 
	code that is relevant when using authentication.
	* libepc/publisher.c:
	* libepc/publisher.h: EpcAuthHandler: mention the two different 
	auth methods (and what to do) in the documentation.
	EpcAuthFlags: Some minor changes to the documention.

2007-11-27  Mathias Hasselmann  <mathias@openismus.com>

	Modify the library to share one single AvahiClient instance. This
	allows to filter-out services announced by the current process in the
	service monitor.

	TODO: Find a way to restore epc_dispatcher_reset_client.

	* docs/reference/libepc/libepc-1.0-sections.txt: Update symbols.
	* libepc/publisher.c: Use epc_shell_get_host_name.
	* libepc/service-monitor.c, tests/framework.c: Use shared AvahiClient.
	* libepc/shell.c, libepc/shell.h: Modify to use only one AvahiClient.
	* libepc/dispatcher.c, libepc/dispatcher.h: Use shared AvahiClient.
	Remove epc_dispatcher_get_host_name.

2007-11-27  Mathias Hasselmann  <mathias@openismus.com>

	Remove some debugging left-overs.

	* tests/test-dispatcher-simple-service.c: Cleanup.

2007-11-26  Mathias Hasselmann  <mathias@openismus.com>

	Change @stability of EpcDispatcher and EpcServiceMonitor to unstable.

	* libepc/dispatcher.c, libepc/service-monitor.c: Change @stability.
